# tikbulk

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
tikbulk/: __init__.py  cli.py
